--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "babel-core": "^6.0.20",
     "babel-loader": "^6.0.1",
     "babel-preset-es2015": "^6.0.15",
+    "css-loader": "^0.26.1",
     "node-libs-browser": "^0.5.3",
+    "vue-loader": "^10.0.2",
+    "vue-template-compiler": "^2.1.8",
     "webpack": "^1.12.2"
   }
 }
