--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node-libs-browser": "^0.5.3",
     "vue-loader": "^10.0.2",
     "vue-template-compiler": "^2.1.8",
-    "webpack": "^1.12.2"
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.16.2"
   }
 }
