--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "web experiments, dummy!",
   "main": "main.js",
   "scripts": {
-    "dev": "webpack-dev-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack-dev-server --progress",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "ruby -run -e httpd . -p 5000"
   },
   "repository": {
     "type": "git",
